--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,8 @@ color:#e27cd4;
 .footer-nav li:nth-of-type(1),
 .footer-nav li:nth-of-type(2),
 .footer-nav li:nth-of-type(3),
-.footer-nav li:nth-of-type(4){
+.footer-nav li:nth-of-type(4),
+.footer-nav li:nth-of-type(5){
   display:none;
 } /* Hides extra nav links in mobile view */
 
@@ -540,7 +541,7 @@ color:#e27cd4;
 
 
 
-  .footer-nav li:nth-of-type(5){
+  .footer-nav li:nth-of-type(6){
     display:none;
   }
 
@@ -561,7 +562,8 @@ color:#e27cd4;
   .footer-nav li:nth-of-type(1),
   .footer-nav li:nth-of-type(2),
   .footer-nav li:nth-of-type(3),
-  .footer-nav li:nth-of-type(4){
+  .footer-nav li:nth-of-type(4)
+  .footer-nav li:nth-of-type(5){
     text-align:right;
     float:left;
   }
@@ -589,7 +591,8 @@ color:#e27cd4;
   .footer-nav li:nth-of-type(1),
   .footer-nav li:nth-of-type(2),
   .footer-nav li:nth-of-type(3),
-  .footer-nav li:nth-of-type(4){
+  .footer-nav li:nth-of-type(4),
+  .footer-nav li:nth-of-type(5){
     display:initial;
   } /* Shows extra nav links in mobile view */
 
