--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,6 @@ li {
 }
 
 h2 {
-  padding-top: 2em;
   font-size: 1em;
   font-weight:700;
   text-transform: uppercase;
@@ -187,6 +186,10 @@ h3 {
   margin-bottom: 2em;
 }*/
 
+#experience {
+  padding-top: 2em;
+ }
+
 
 /* --- education design section --- */
 
@@ -261,10 +264,29 @@ footer p {
   .footer-nav {
     border-top: solid 1px #e1e5ed;
     margin: 0 auto;
-    padding: 2em 0 0;
+    padding: 1em 0 0;
+    display: flex;
+    justify-content: space-between;
   }
 
-   .footer-name,
+.footer-name,
+.footer-nav .nav {
+  margin: 0;
+}
+.footer-name{
+  padding: 1em;
+}
+
+.footer-nav .nav {
+  display: flex;
+  justify-content: flex-end;
+
+}
+
+.footer-nav li {
+  padding: 1em;
+}
+   /*.footer-name,
      footer .nav,
      footer .nav li{
      display:inline-block;
@@ -295,7 +317,7 @@ footer p {
     padding-left: 1em;
     margin-left: 1em;
     margin-right:0;
-  }
+  }*/
 
   .footer-nav a,
    h2  {
@@ -304,10 +326,10 @@ footer p {
     text-transform: uppercase;
   }
 
-    footer .nav li,
+    /*footer .nav li,
     .footer-nav ul{
     padding: 0;
-  }
+  }*/
 
 
 /* =================================
@@ -546,9 +568,9 @@ color:#e27cd4;
   }
 
 
-  .footer-name {
+  /*.footer-name {
     width:25%;
-  }
+  }*/
 
 
   .footer-nav li,
@@ -559,16 +581,16 @@ color:#e27cd4;
     background:none;
   }
 
-  .footer-nav li:nth-of-type(1),
+  /*.footer-nav li:nth-of-type(1),
   .footer-nav li:nth-of-type(2),
   .footer-nav li:nth-of-type(3),
   .footer-nav li:nth-of-type(4)
   .footer-nav li:nth-of-type(5){
     text-align:right;
     float:left;
-  }
+  }*/
 
-  .footer-nav ul li a,
+  /*.footer-nav ul li a,
   .footer-name {
     padding: 1rem;
     margin:0;
@@ -577,10 +599,11 @@ color:#e27cd4;
   footer .nav li{
     padding-right: 0;
     margin:0;
-  }
+  }*/
 
-  .footer-nav,
-  .footer-nav ul{
+  .footer-nav
+  /*.footer-nav ul*/
+  {
     margin:0 auto;
   }
 
