--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,19 @@ h3 {
   padding-bottom:30px;
 }
 
+/*Site section*/
 
+.base p {
+  font-weight: 500;
+}
+
+.base p a {
+  color:purple;
+}
+
+.base p a:hover {
+  font-weight: bold;
+}
 
 /* experience section */
 
@@ -186,7 +198,8 @@ h3 {
   margin-bottom: 2em;
 }*/
 
-#experience {
+#experience,
+#base {
   padding-top: 2em;
  }
 
@@ -247,11 +260,21 @@ footer p {
 }
 
 .footer p:nth-of-type(2),
-.footer p:nth-of-type(3){
+.footer p:nth-of-type(5){
+  margin-top: 1.5em;
+  border-top: 1px solid grey;
+  padding-top: .5em;
+
+}
+
+.footer p:nth-of-type(3),
+.footer p:nth-of-type(4),
+.footer p:nth-of-type(6),
+.footer p:nth-of-type(7){
   margin-top:20px;
 }
 
-.footer p:nth-of-type(3){
+.footer p:nth-of-type(7){
   margin-bottom:70px;
 }
 
@@ -447,6 +470,14 @@ color:#e27cd4;
   .profile .secondary{
     width:45%;
     /*margin-left:-4px;*/
+  }
+
+  /* ===================
+       Site
+  ====================== */
+
+  .base p {
+    font-size: 1.5em;
   }
 
 /* ===================
